--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,15 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: [ '1.14', '1.13' ]    
+        go: [ '1.13', '1.14' ]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     
     steps:
 
-    - name: Set up Go ${{ matrix.go }}
+    - name: Set up Go ${{ matrix.go }} on ${{ matrix.platform }}
       uses: actions/setup-go@v2
       with:
         go-version: ^${{ matrix.go }}
-        id: go-${{ matrix.go }}
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
@@ -34,8 +34,8 @@ jobs:
             dep ensure
         fi
 
-    - name: Build
+    - name: Build with Go ${{ matrix.go }} on ${{ matrix.platform }}
       run: go build -v .
 
-    - name: Test
+    - name: Test with Go ${{ matrix.go }} on ${{ matrix.platform }}
       run: go test -v .
