Fix job name (not paramerized)

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-    name: Build & test with Go ${{ matrix.go }} on ${{ matrix.platform }}
+    name: Build & test with
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
