--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,11 +10,11 @@ jobs:
 
   build:
     name: Build & test with Go ${{ matrix.go }} on ${{ matrix.platform }}
-    runs-on: ${{ matrix.plaform }}
+    runs-on: ${{ matrix.platform }}
     strategy:
       matrix:
         go: [ '1.13', '1.14' ]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: ['ubuntu-latest', 'macos-latest', 'windows-latest']
     
     steps:
 
