--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,10 +29,10 @@ jobs:
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+        # if [ -f Gopkg.toml ]; then
+        #     curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+        #     dep ensure
+        # fi
 
     - name: Build with Go ${{ matrix.go }} on ${{ matrix.platform }}
       run: go build -v .
